# tickets

./: .dockerignore  .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
tickets/: asgi.py  settings.py  urls.py
