[tool.poetry]
name = "helpdesk"
version = "0.1.0"
description = ""
authors = ["bibby <bibby@bbby.org>"]

[tool.poetry.dependencies]
python = "^3.9"
django-helpdesk = "^0.5.0"
psycopg2 = "^2.9.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
